--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -28,3 +28,9 @@ div#wall div.parent div:last-child div#tag-6 {
     z-index: 2;
     display: block;
 }
+
+body div#wall div.parent div > #tag-7.slick {
+    background: url(../images/tag-7.png) no-repeat;
+    z-index: 1;
+    display: block;
+}
